# documentation

./: .gitignore  CMakeLists.txt  Cmakelist.txt  README.md  SUMMARY.md.tmpl
.github/workflows/: Dockerfile  another.yml  ashley.yml  ashleyone.yml  ashleyyoung.yml  cl.yml  docker-image.yml  done.yml  final.yml  main.yml
Doxygen/: CMakeLists.txt  Doxyfile
Doxygen/.doxybook/: config.json
cmake/functions/: all.cmake  cpp_modules.cmake  ink_external_libraries.cmake  project_flags.cmake  sanitizers.cmake  semver.cmake  target_options.cmake
documentation/: Dockerfile
dotnet/: Dockerfile
example/: SUMMARY.md.tmpl
include/doxybook/: config.hpp  enums.hpp  exception.hpp  exception_utils.hpp  ext_markdown_printer.hpp  generator.hpp  json_converter.hpp  node.hpp  path.hpp  text_plain_printer.hpp  text_printer.hpp  utils.hpp  xml.hpp  xml_text_parser.hpp
lib/: CMakeLists.txt
lib/doxybook/: config.cpp
